got the logic working as well as added a deal (restart) button

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
     <section id="shuffled-deck-container" class="card-container"></section> -->
     <h2>Dealer <span id="dealer-sum"></span></h2>
     <div id="dealer-cards">
-      <img id="hidden" src="./cards/BACK.png" alt="BACK">
+      <img id="hidden" src="./cards/BACK.png" alt="BACK" />
     </div>
 
     <h2>You: <span id="your-sum"></span></h2>
     <div id="your-cards"></div>
 
     <br />
-    <button id="hit">hit</button>
-    <button id="stay">Stay</button>
+
+    <div id="buttons">
+      <button id="hit" class="">hit</button>
+      <button id="stay" class="">Stay</button>
+    </div>
     <p id="results"></p>
   </body>
 </html>
