finally got the restart game button working

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       <button id="stay" class="">Stay</button>
     </div>
     <p id="results"></p>
+    <button id="restart">Restart Game</button>
   </body>
 </html>
