--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <body>
     <div class="top-bar">
       <img class="logo" src="/img/game.png" alt="rules-of-the-game" />
-      <img
+      <!-- <img
         class="rules"
         src="/img/how-to-play.svg"
         alt="rules-of-the-game"
         onclick="openNav()"
-      />
+      /> -->
       <!-- <span style="font-size: 30px; cursor: pointer" onclick="openNav()" >&#9776; open</span> -->
     </div>
     <div class="middle">
@@ -41,22 +41,47 @@
         <button id="stay" class="">Stay</button>
         <button id="restart">Deal</button>
       </div>
+
+      <!-- <div id="bet-container">
+        <label for="bet">Place Your Bet:</label>
+        <input type="number" id="bet" min="1" step="1" />
+        <button id="place-bet">Place Bet</button>
+      </div> -->
+
       <h3 id="results"></h3>
     </div>
     <div class="footer">
-      <p>Wins: <span>10</span></p>
-      <p>Loses: <span>5</span></p>
-      <p>Draws: <span>2</span></p>
+      <div id="rules">
+        <img
+          class="rules"
+          src="/img/how-to-play.svg"
+          alt="rules-of-the-game"
+          onclick="openNav()"
+        />
+      </div>
+      <div class="box">
+        <p>Wins: <span id="wins">0</span></p>
+        <p>Loses: <span id="losses">0</span></p>
+        <p>Draws: <span id="draws">0</span></p>
+      </div>
     </div>
     <div class="tray" id="mySidenav">
-      <button
-        class="close"
+      <img
+        src="./img/close-button.svg"
+        alt="close button"
+        class="closebtn"
+        href="javascript:void(0)"
+        class="closebtn"
+        onclick="closeNav()"
+      />
+      <!-- <button
+        class="closebtn"
         href="javascript:void(0)"
         class="closebtn"
         onclick="closeNav()"
       >
         X
-      </button>
+      </button> -->
       <div class="container-tray">
         <h2>How to Play</h2>
         <div class="youtube">
