It can now record wins / losses / draws

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="box">
         <p>Wins: <span id="wins">0</span></p>
-        <p>Loses: <span id="losses">0</span></p>
+        <p>Losses: <span id="losses">0</span></p>
         <p>Draws: <span id="draws">0</span></p>
       </div>
     </div>
