got animation on the cards working

--- a/index.html
+++ b/index.html
@@ -102,3 +102,12 @@
     </div>
   </body>
 </html>
+
+
+<!-- 
+  got all the logic to working
+  managed to get the wins and loses counter working 
+  majority of my MVP is finihed just need to add some animation to the cards appearing 
+
+  today - add betting / so an amount you want to bet input / balance etc...
+-->
