some more styling changes

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         />
       </div>
       <div class="box">
-        <p>Wins: <span id="wins">0</span></p>
-        <p>Losses: <span id="losses">0</span></p>
-        <p>Draws: <span id="draws">0</span></p>
+        <p>Wins: <span id="wins"></span></p>
+        <p>Losses: <span id="losses"></span></p>
+        <p>Draws: <span id="draws"></span></p>
       </div>
     </div>
     <div class="tray" id="mySidenav">
