--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <!-- <script defer src="/js/card.js"></script> -->
   </head>
   <body>
+    <!-- <div id="splash">
+      <img class="splash-logo" src="/img/game.png" alt="rules-of-the-game" />
+      <input type="text" id="name-input" placeholder="Your Name" />
+      <button id="enter-button">Enter</button>
+    </div> -->
     <div class="top-bar">
       <h3 id="results"></h3>
     </div>
@@ -28,7 +33,7 @@
         </div>
       </div>
       <div class="bottom-border">
-        <h2>You <span id="your-sum"></span></h2>
+        <h2 id="player-name">Player <span id="your-sum"></span></h2>
         <div id="your-cards"></div>
       </div>
       <div id="buttons">
