correcting the file structure for github pages

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Black Jack</title>
     <link
-      href="css/card-library/css/cardstarter.css"
+      href="./css/card-library/css/cardstarter.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="/css/blackjack.css" />
-    <script defer src="/js/blackjack.js"></script>
-    <!-- <script defer src="/js/card.js"></script> -->
+    <link rel="stylesheet" href="./css/blackjack.css" />
+    <script defer src="./js/blackjack.js"></script>
+    <!-- <script defer src="./js/card.js"></script> -->
   </head>
   <body>
     <!-- <div id="splash">
