--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h3 id="results"></h3>
     </div>
     <div class="logo">
-      <img class="logo" src="/img/game.png" alt="rules-of-the-game" />
+      <img class="logo" src="./img/game.png" alt="rules-of-the-game" />
     </div>
     <div class="middle">
       <div class="top-border">
@@ -75,7 +75,7 @@
       <div id="rules">
         <img
           class="rules"
-          src="/img/how-to-play.svg"
+          src="./img/how-to-play.svg"
           alt="rules-of-the-game"
           onclick="openNav()"
         />
