got the player name input working

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     <!-- <script defer src="./js/card.js"></script> -->
   </head>
   <body>
-    <!-- <div id="splash">
+    <div id="splash">
       <img class="splash-logo" src="/img/game.png" alt="rules-of-the-game" />
       <input type="text" id="name-input" placeholder="Your Name" />
       <button id="enter-button">Enter</button>
+    </div>
+
+    <!-- <div id="form">
+      <input type="text" id="name-input" placeholder="Your Name" />
+      <button id="enter-button">Enter</button>
     </div> -->
+
     <div class="top-bar">
       <h3 id="results"></h3>
     </div>
