--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <img class="splash-logo" src="/img/game.png" alt="rules-of-the-game" />
       <input type="text" id="name-input" placeholder="Your Name" />
       <button id="enter-button">Play Game</button>
+      <div id="error" class="display-none">Please enter a name before clicking Play Game</div>
     </div>
 
     <!-- <div id="form">
