fixed the image not rendering on the splash screen

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   </head>
   <body>
     <div id="splash">
-      <img class="splash-logo" src="/img/game.png" alt="rules-of-the-game" />
+      <img class="splash-logo" src="./img/game.png" alt="rules-of-the-game" />
       <input type="text" id="name-input" placeholder="Your Name" />
       <button id="enter-button">Play Game</button>
-      <div id="error" class="display-none">Please enter a name before clicking Play Game</div>
+      <div id="error" class="display-none">
+        Please enter a name before clicking Play Game
+      </div>
     </div>
 
     <!-- <div id="form">
@@ -120,3 +122,4 @@
     </div>
   </body>
 </html>
+
