cleaning up my code making sure it is formatted correctly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Black Jack</title>
+    <title>Blackjack</title>
     <link
       href="./css/card-library/css/cardstarter.css"
       rel="stylesheet"
@@ -11,7 +11,6 @@
     />
     <link rel="stylesheet" href="./css/blackjack.css" />
     <script defer src="./js/blackjack.js"></script>
-    <!-- <script defer src="./js/card.js"></script> -->
   </head>
   <body>
     <div id="splash">
@@ -22,12 +21,6 @@
         Please enter a name before clicking Play Game
       </div>
     </div>
-
-    <!-- <div id="form">
-      <input type="text" id="name-input" placeholder="Your Name" />
-      <button id="enter-button">Enter</button>
-    </div> -->
-
     <div class="top-bar">
       <h3 id="results"></h3>
     </div>
@@ -51,35 +44,6 @@
         <button id="restart">Deal</button>
       </div>
     </div>
-
-    <!-- <div id="bet-container">
-        <label for="bet">Place Your Bet:</label>
-        <input type="number" id="bet" min="1" step="1" />
-        <button id="place-bet">Place Bet</button>
-      </div> -->
-
-    <!-- <div class="buttons">
-      <button id="betbtn1" onclick="betButton1()">$1 BET</button>
-      <button id="betbtn2" onclick="betButton2()">$5 BET</button>
-      <button id="betbtn3" onclick="betButton3()">$10 BET</button>
-      <button id="betbtn4" onclick="betButton4()">$20 BET</button>
-    </div>
-    <div class="player-stats">
-      <p><span id="balance">Balance: 100</span> | Bet: <span id="current-bet">0</span></p>
-    </div>
-    <div id="message-el">
-      Want to play a round?
-    </div> -->
-
-    <!-- <div class="betting">
-      <label for="betAmount">Bet Amount:</label>
-      <input type="number" id="betAmount" min="1" step="1" value="1" />
-      <button id="increaseBet">+</button>
-      <button id="decreaseBet">-</button>
-      <button id="placeBet">Place Bet</button>
-      <p>Balance: <span id="balance">100</span></p>
-    </div> -->
-
     <div class="footer">
       <div id="rules">
         <img
@@ -101,10 +65,8 @@
         alt="close button"
         class="closebtn"
         href="javascript:void(0)"
-        class="closebtn"
         onclick="closeNav()"
       />
-
       <div class="container-tray">
         <h2>How to Play</h2>
         <div class="youtube">
