--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blackjack</title>
+    <link rel="icon" type="image/x-icon" href="./img/game.png" />
     <link
       href="./css/card-library/css/cardstarter.css"
       rel="stylesheet"
